--- a/project/src/css-(styles)/style.scss
+++ b/project/src/css-(styles)/style.scss
@@ -1,75 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+html {
+    scroll-behavior: smooth;
+}
 
 li {
 	list-style-type: none;
 }
 
 header {
-	width: 100%;
-	background-color: rgba(212, 194, 160, 0.712);
-	height: 170px;
-	nav {
-		.burger-menu {
-			display: none;
-			flex-direction: column;
-			cursor: pointer;
-		
-			.burger-bar {
-				width: 25px;
-				height: 3px;
-				background-color: #fff;
-				margin: 4px 0;
-				transition: all 0.3s ease;
-			}
-		}
-		margin-left: 5%;
-		margin-right: 5%;
-		padding-top: 1%;
-		ul {
-			display: flex;
-			gap: 25%;
-		}
-		li {
-			margin-top: 30px;
-			list-style-type: none;
-			font-size: 30px;
-			color: #fff;
-			text-align: center;
-			text-transform: uppercase;
-			letter-spacing: 5px;
-			transition: all 1s;
-	
-			&:hover {
-				color: black;
-				background-color: #fff;
-				border-radius: 100px;
-				box-shadow: 0 0 20px rgb(255, 255, 255), 0 0 40px rgba(249, 252, 255, 0.6),
-					0 0 60px rgba(171, 198, 226, 0.6);
-				transform: scale(0.8);
-				padding: 30px;
-			}
-		}
-		.li1 {
-			margin-top: 30px;
-			list-style-type: none;
-			font-size: 30px;
-			color: #fff;
-			text-align: center;
-			letter-spacing: 5px;
-	
-			img {
-				width: 100px;
-				border-radius: 50px;
-				height: 100px;
-				transition: all 0.5s;
-	
-				&:hover {
-					transform: scale(1.5) rotate(720deg);
+    width: 100%;
+    background-color: rgba(212, 194, 160, 0.712);
+    height: 170px;
+
+    nav {
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-top: 1%;
+
+        .burger-menu {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+
+            .burger-bar {
+                width: 25px;
+                height: 3px;
+                background-color: #fff;
+                margin: 4px 0;
+                transition: all 0.3s ease;
+            }
+        }
+
+        ul {
+            display: flex;
+            gap: 25%;
+
+            li {
+				a{
+					color: #fff;
+					text-decoration: none;
 				}
-			}
-		}
-	}
+				a:hover{
+					color: #000;
+				}
+                margin-top: 30px;
+                list-style-type: none;
+                font-size: 30px;
+                text-align: center;
+                text-transform: uppercase;
+                letter-spacing: 5px;
+                transition: all 2s;
+
+                &:hover {
+					color: #000;
+					background-color: #fff;
+					border-radius: 100px;
+					box-shadow: 0 0 20px rgb(255, 255, 255), 
+								0 0 40px rgba(249, 252, 255, 0.6),
+								0 0 60px rgba(171, 198, 226, 0.6);
+					transform: scale(0.8);
+					padding: 30px;
+                }
+            }
+
+            .li1 {
+                margin-top: 30px;
+                font-size: 30px;
+                color: #fff;
+                text-align: center;
+                letter-spacing: 5px;
+
+                img {
+                    width: 100px;
+                    border-radius: 50px;
+                    height: 100px;
+                    transition: all 0.5s;
+
+                    &:hover {
+                        transform: scale(1.5) rotate(720deg);
+                    }
+                }
+            }
+        }
+    }
 }
+
 #gallery {
 	padding-top: 5%;
 	background: url(/project/src/images/галлерея.webp) no-repeat center/cover;
@@ -741,6 +756,179 @@ footer {
 	}
 }
 
+@media (max-width: 932px){
+	footer{
+		p{
+			width: 130px;
+		}
+		a{
+			margin-left: 40%;
+			margin-top: 2%;
+		}
+	}
+	header {
+		height: auto;
+		padding: 15px;
+		flex-direction: column;
+	}
+
+	nav ul {
+		flex-direction: column;
+		gap: 15px;
+	}
+
+	nav li {
+		font-size: 24px;
+		margin-top: 15px;
+	}
+
+	.burger-menu {
+		display: flex;
+	}
+	#art-box {
+		padding-top: 5%;
+		padding-bottom: 15%;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	#art-box img {
+		object-fit: cover;
+		border-radius: 30px;
+		margin-top: 5%;
+		margin-left: 0;
+		height: 300px;
+		width: 500px;
+	}
+
+	.art-description {
+		margin-left: 0;
+		margin-top: 20px;
+		max-width: 90%;
+		padding: 20px;
+	}
+
+	.art-description h2 {
+		font-size: 20px;
+		margin-bottom: 10px;
+	}
+
+	.art-description p {
+		font-size: 14px;
+	}
+
+	.art-description p:hover {
+		font-size: 16px;
+	}
+
+	.art-description .learn-more {
+		font-size: 12px;
+		padding: 8px 20px;
+	}
+
+	.art-description::before,
+	.art-description::after {
+		width: 80px;
+		height: 80px;
+	}
+
+	.art-description:hover::before,
+	.art-description:hover::after {
+		transform: scale(1.05);
+	}
+	#elektrik-conteiner {
+		height: 800px;
+		background-color: #434646;
+		padding: 20px;
+	}
+	.electrik {
+		margin-left: 0;
+		margin-top: 20px;
+		padding: 20px;
+		width: 90%;
+		border-radius: 30px;
+		position: relative;
+		background: linear-gradient(70deg, rgb(255, 255, 255), rgb(178, 166, 166))
+			no-repeat center/cover;
+		transition: 0.5s;
+	}
+
+	.electrik img {
+		margin-top: 5%;
+		margin-left: 0;
+		width: 100%;
+		height: auto;
+	}
+
+	.electrik h1 {
+		font-size: 28px;
+		margin-top: 20px;
+		letter-spacing: 2px;
+	}
+
+	.electrik p {
+		display: none;
+	}
+
+	.electrik h1:hover {
+		transform: scale(1.02);
+		box-shadow: none;
+	}
+
+	.electrik:hover {
+		box-shadow: none;
+	}
+	#TheBestGallery {
+		height: 230px;
+		h1 {
+			margin-left: 25%;
+			font-size: 100px;
+		}
+	}
+	.catalog-section {
+		.catalog-container {
+			display: block;
+			.catalog-item {
+				width: 100%;
+				img {
+					width: 90%;
+					align-items: center;
+					height: 400px;
+				}
+
+				h3 {
+					align-items: center;
+					width: 100%;
+				}
+
+				.myP {
+					align-items: center;
+					width: 100%;
+				}
+			}
+		}
+	}
+	#plitka {
+		section {
+			display: block;
+			.ul-one {
+				li {
+					img {
+						width: 700px;
+						margin-left: 5%;
+					}
+				}
+			}
+			.ul2 {
+				li {
+					width: 600px;
+					margin-left: 10%;
+				}
+			}
+		}
+	}
+}
+
 @media (max-width: 768px) {
 	footer{
 		p{
@@ -914,6 +1102,135 @@ footer {
 	}
 }
 
+@media (max-width: 732px){
+	#plitka{
+		section{
+			.ul-one{
+				li{
+					img{
+						padding: 20px;
+					box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+						rgba(0, 0, 0, 0.22) 0px 15px 12px;
+					margin-left: 15%;
+					margin-right: 15%;
+					width: 70%;
+					height: 500px;
+					border-radius: 100px;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 481px) {
+	#elektrik-conteiner {
+		height: 800px;
+		h3{
+			margin-top: 85%;
+			margin-left: 30%;
+		}
+		p {
+			text-decoration: none;
+			font-family: 'Roboto';
+			font-size: 20px;
+			margin-top: 80%;
+			margin-left: 2%;
+			width: 90%;
+		}
+		.electrik {
+			padding: 20px;
+			margin-top: 20%;
+			margin-left: 0px;
+			height: auto;
+			align-items: center;
+			width: 90%;
+			img {
+				width: 280px;
+			}
+		}
+	}
+	.qa {
+		padding-left: 15%;
+		align-items: center;
+	}
+	.question {
+		width: 80%;
+		margin-left: 50px;
+		text-align: center;
+	}
+	.answer {
+		width: 80%;
+	}
+	#art-box {
+		padding-bottom: 25%;
+		img {
+			width: 90%;
+			object-fit: cover;
+		}
+	}
+	#plitka {
+		padding-top: 2%;
+		padding-bottom: 2%;
+		section {
+			flex-direction: column;
+			.ul-one {
+				li {
+					img {
+						object-fit: cover;
+						padding: 5px;
+						max-height: 250px;
+						width: 75%;
+						margin-left: 12.5%;
+						border-radius: 20px;
+						margin-right: 0%;
+					}
+				}
+			}
+			.ul2 {
+				li {
+					margin-top: 5%;
+					border-radius: 20px;
+					padding: 10px;
+					width: 80%;
+					h1 {
+						font-size: 24px;
+					}
+					.li-p {
+						font-size: 16px;
+						padding: 15px;
+					}
+					.btn {
+						font-size: 18px;
+						padding: 6px 25px;
+					}
+					.btn:after {
+						top: -1px;
+						left: -1px;
+						border-top: 5px solid black;
+						border-left: 5px solid black;
+					}
+				}
+			}
+		}
+	}
+	footer{
+		p{
+			width: 130px;
+		}
+		a{
+			margin-left: 50%;
+			margin-top: 5%;
+		}
+	}
+	#TheBestGallery{
+		h1{
+			margin-left: 5%;
+			font-size: 100px;
+		}
+	}
+}
+
 @media (max-width: 426px) {
 	#elektrik-conteiner {
 		height: 800px;
@@ -967,8 +1284,10 @@ footer {
 						object-fit: cover;
 						padding: 5px;
 						max-height: 250px;
-						width: 90%;
+						width: 75%;
+						margin-left: 12.5%;
 						border-radius: 20px;
+						margin-right: 0%;
 					}
 				}
 			}
@@ -1015,6 +1334,21 @@ footer {
 		}
 	}
 }
+
+@media (max-width:376px){
+		#plitka{
+			section{
+				.ul-one{
+					li{
+						img{
+							padding: 20px;
+							width: 70%;
+						}
+					}
+				}
+			}
+		}
+	}
 
 @media (max-width:376px) {
 	#gallery{
